--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VUE_APP_I18N_LOCALE=ar
 VUE_APP_I18N_FALLBACK_LOCALE=ar
-VUE_APP_API_URL_LO=http://192.168.1.40:5001/api/
-VUE_APP_API_URL=https://elrady.co/api/
+VUE_APP_API_URL=http://192.168.1.40:5001/api/
+VUE_APP_API_URL_PR=https://elrady.co/api/
